--- a/style.css
+++ b/style.css
@@ -1,332 +1,377 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-*{
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-} 
-nav{
-  display: flex;
-  height: 80px;
+  font-family: "Poppins", sans-serif;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  background: #f2f2f2;
+}
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 5;
   width: 100%;
-  background: #0a7532;
+  display: flex;
+  justify-content: center;
+  background: #333;
+}
+
+.navbar {
+  display: flex;
+  padding: 0 10px;
+  max-width: 1200px;
+  width: 100%;
   align-items: center;
   justify-content: space-between;
-  padding: 0 50px 0 100px;
-  flex-wrap: wrap;
 }
-nav .logo{
-  color: #fff;
-  font-size: 35px;
-  font-weight: 600;
+
+.navbar input#menu-toggler {
+  display: none;
 }
-nav ul{
-  display: flex;
-  flex-wrap: wrap;
-  list-style: none;
-}
-nav ul li{
-  margin: 0 5px;
-}
-nav ul li a{
-  color: #f2f2f2;
-  text-decoration: none;
-  font-size: 18px;
-  font-weight: 500;
-  padding: 8px 15px;
-  border-radius: 5px;
-  letter-spacing: 1px;
-  transition: all 0.3s ease;
-}
-nav ul li a.active,
-nav ul li a:hover{
-  color: #111;
-  background: #fff;
-}
-nav .menu-btn i{
-  color: #fff;
-  font-size: 22px;
+
+.navbar #hamburger-btn {
   cursor: pointer;
   display: none;
 }
-input[type="checkbox"]{
-  display: none;
-}
-@media (max-width: 1000px){
-  nav{
-    padding: 0 40px 0 50px;
-  }
-}
-@media (max-width: 920px) {
-  nav .menu-btn i{
-    display: block;
-  }
-  #click:checked ~ .menu-btn i:before{
-    content: "\f00d";
-  }
-  nav ul{
-    position: fixed;
-    top: 80px;
-    left: -100%;
-    background: #111;
-    height: 100vh;
-    width: 100%;
-    text-align: center;
-    display: block;
-    transition: all 0.3s ease;
-  }
-  #click:checked ~ ul{
-    left: 0;
-  }
-  nav ul li{
-    width: 100%;
-    margin: 40px 0;
-  }
-  nav ul li a{
-    width: 100%;
-    margin-left: -100%;
-    display: block;
-    font-size: 20px;
-    transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  }
-  #click:checked ~ ul li a{
-    margin-left: 0px;
-  }
-  nav ul li a.active,
-  nav ul li a:hover{
-    background: none;
-    color: cyan;
-  }
+
+.navbar .all-links {
+  display: flex;
+  align-items: center;
 }
 
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+.navbar .all-links li {
+  position: relative;
+  list-style: none;
 }
 
-.card {
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    margin: 15px;
-    padding: 20px;
-    width: 250px;
-    text-align: center;
-    transition: transform 0.2s;
+.navbar .logo a {
+  display: flex;
+  align-items: center;
+  margin-left: 0;
 }
 
-.card h2 {
-    color: #3e721d; /* Starbucks Green */
+header a, footer a {
+  margin-left: 40px;
+  text-decoration: none;
+  color: #fff;
+  height: 100%;
+  padding: 20px 0;
+  display: inline-block;
 }
 
-.card p {
-    color: #555;
+header a:hover, footer a:hover {
+  color: #ddd;
 }
 
-.card:hover {
-    transform: scale(1.05);
-}
-.us{
-    text-align: center;
-    color:  #3e721d;
-}
-.services{
-    max-width: 800px;
-    margin: auto;
-    text-align: center;
+.homepage {
+  height: 100vh;
+  width: 100%;
+  position: relative;
+  background: url("images/home-bg.jpg");
+  background-position: center 65%;
+  background-size: cover;
 }
 
-h1 {
-    color: #3e721d; /* Starbucks Green */
+.homepage::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.2);
 }
 
-.service-card {
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    margin: 15px;
-    padding: 10px;
-    cursor: pointer;
-    transition: transform 0.2s;
+.homepage .content {
+  display: flex;
+  height: 85%;
+  z-index: 3;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
-.service-card h2 {
-    color: #3e721d;
+.homepage .content h1 {
+  font-size: 60px;
+  font-weight: 700;
+  margin-bottom: 10px;
 }
 
-.hidden {
-    display: none;
+.homepage .content .text {
+  margin-bottom: 50px;
+  color: #fff;
+  font-size: 20px;
+  text-align: center;
+  text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
 }
 
-.service-card:hover {
-    transform: scale(1.05);
+.content a {
+  color: #000;
+  display: block;
+  text-transform: uppercase;
+  font-size: 18px;
+  margin: 0 10px;
+  padding: 10px 30px;
+  border-radius: 5px;
+  background: #fff;
+  border: 2px solid #fff;
+  transition: 0.4s ease;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+  text-decoration: none;
 }
 
-.products {
-    max-width: 1200px;
-    margin: 0 auto;
-    text-align: center;
+.content a:hover {
+  color: #fff;
+  background: rgba(255,255,255,0.3);
 }
 
-h1 {
-    color: #00704A;
+section {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 80px 0 0;
 }
 
-.product-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 20px;
+section h2 {
+  font-size: 2rem;
 }
 
-.product {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 15px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+section > p {
+  text-align: center;
 }
 
-.product img {
-    max-width: 100%;
-    border-radius: 8px;
+section .cards {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1200px;
+  margin-top: 50px;
+  padding: 0 10px;
+  justify-content: space-between;
 }
 
-.product h2 {
-    font-size: 1.5em;
-    color: #333;
+section.about {
+  margin: 0 auto;
+  max-width: 1200px;
 }
 
-.product p {
-    font-size: 0.9em;
-    color: #666;
+.about .company-info {
+  margin-top: 30px;
 }
 
-.product span {
-    font-size: 1.2em;
-    color: #00704A;
-    font-weight: bold;
+.about h3 {
+  margin: 30px 0 10px;
 }
 
-button {
-    background-color: #00704A;
-    color: white;
-    border: none;
-    padding: 10px 15px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 1em;
+.about .team {
+  text-align: left;
+  width: 100%;
 }
 
-button:hover {
-    background-color: #005e3f;
-}
-.form-container {
-    max-width: 400px;
-    margin: auto;
-    padding: 20px;
-  
-    background: white;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+.about .team ul {
+  padding-left: 20px;
 }
 
-h2 {
-    text-align: center;
-    margin-bottom: 20px;
+section .cards .card {
+  background: #fff;
+  padding: 40px 15px;
+  list-style: none;
+  border-radius: 5px;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.04);
+  margin-bottom: 40px;
+  width: calc(100% / 3 - 30px);
+  text-align: center;
 }
 
-label {
-    display: block;
-    margin-bottom: 5px;
+.portfolio .cards .card {
+  padding: 0 0 20px;
 }
 
-input, textarea {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
+.services .card img {
+  width: 120px;
+  height: 120px;
+  margin-bottom: 20px;
+  border-radius: 100%;
+  object-fit: cover;
 }
 
-input:focus, textarea:focus {
-    border-color: #66afe9;
-    outline: none;
+.portfolio .card img {
+  width: 100%;
+  padding-bottom: 10px;
+  aspect-ratio: 16 / 9;
+  object-fit: cover;
+  border-radius: 7px;
 }
 
-button {
-    width: 100%;
-    padding: 10px;
-    background-color: #5cb85c;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    font-size: 16px;
-    cursor: pointer;
+.cards .card p {
+  padding: 0 15px;
+  margin-top: 5px;
 }
 
-button:hover {
-    background-color: #4cae4c;
+.about .row {
+  padding: 0 10px;
+}
+
+.contact .row {
+  margin: 60px 0 90px;
+  display: flex;
+  max-width: 1200px;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.contact .row .col {
+  padding: 0 10px;
+  width: calc(100% / 2 - 50px);
+}
+
+.contact .col p {
+  margin-bottom: 10px;
+}
+
+.contact .col p i {
+  color: #7a7a7a;
+  margin-right: 10px;
+}
+
+.contact form input {
+  height: 45px;
+  margin-bottom: 20px;
+  padding: 10px;
+  width: 100%;
+  font-size: 16px;
+  outline: none;
+  border: 1px solid #bfbfbf;
+}
+
+.contact form textarea {
+  padding: 10px;
+  width: 100%;
+  font-size: 16px;
+  height: 150px;
+  outline: none;
+  resize: vertical;
+  border: 1px solid #bfbfbf;
+}
+
+.contact form button {
+  margin-top: 10px;
+  padding: 10px 20px;
+  font-size: 17px;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  background: #333;
+  transition: 0.2s ease;
+}
+
+.contact form button:hover {
+  background: #525252;
 }
 
 footer {
-    background-color: #3e721d;
-    color: #fff;
-    padding: 20px 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  background: #000;
+  padding: 20px 0;
 }
 
-.footer-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    max-width: 1200px;
-    margin: auto;
+footer div {
+  padding: 0 10px;
+  max-width: 1200px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
-.footer-links {
-    flex: 1;
-    min-width: 200px;
-    margin: 10px;
+footer span {
+  color: #fff;
 }
 
-.footer-links h3 {
-    border-bottom: 1px solid #fff;
-    margin-bottom: 10px;
+footer a {
+  padding: 0;
 }
 
-.footer-links ul {
-    list-style-type: none;
-}
+@media screen and (max-width: 860px) {
+  .navbar .all-links {
+    position: fixed;
+    left: -100%;
+    width: 300px;
+    display: block;
+    height: 100vh;
+    top: 75px;
+    background: #333;
+    transition: left 0.3s ease;
+  }
 
-.footer-links ul li {
-    margin: 5px 0;
-}
+  .navbar #menu-toggler:checked~.all-links {
+    left: 0;
+  }
 
-.footer-links a {
-    color: #fff;
-    text-decoration: none;
-}
+  .navbar .all-links li {
+    font-size: 18px;
+  }
 
-.footer-links a:hover {
-    text-decoration: underline;
-}
+  .navbar #hamburger-btn {
+    display: block;
+  }
 
-.footer-contact {
-    flex: 1;
-    min-width: 200px;
-    margin: 10px;
-}
-
-.footer-bottom {
+  section > p {
     text-align: center;
-    padding: 10px 0;
-    background-color: #3e721d;
+  }
+
+  section .cards .card {
+    width: calc(100% / 2 - 15px);
+    margin-bottom: 30px;
+  }
+
+  .homepage .content h1 {
+    font-size: 40px;
+    font-weight: 700;
+    margin-bottom: 10px;
+  }
+
+  .homepage .content .text {
+    font-size: 17px;
+  }
+
+  .content a {
+    font-size: 17px;
+    padding: 9px 20px;
+  }
+
+  .contact .row {
+    flex-direction: column;
+  }
+
+  .contact .row .col {
+    width: 100%;
+  }
+
+  .contact .row .col:last-child {
+    margin-top: 40px;
+  }
+
+  footer a {
+    height: 0;
+  }
 }
 
-@media (max-width: 600px) {
-    .footer-container {
-        flex-direction: column;
-        align-items: center;
-    }
+@media screen and (max-width: 560px) {
+  section .cards .card {
+    width: 100%;
+    margin-bottom: 30px;
+  }
 }
